--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <title>Timora</title>
     <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/index.css">
     <script src="https://kit.fontawesome.com/cd4b7ba0d5.js" crossorigin="anonymous"></script>
 </head>
 <body>
