--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <canvas id="grainCanvas"></canvas>
     <div class="container">
         <div class="logo">
-            <img href="assets/icons/timora-logo.svg">
+            <img src="assets/icons/timora-logo.svg" id="timora-logo">
         </div>
         <div class="title">
-            <h1>
-                Welcome to Timora
+            <h1 id="title">
+                Welcome to <br> Timora
             </h1>
         </div>
         <div class="reviews">
