--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
-    <title>Timora</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://kit.fontawesome.com/cd4b7ba0d5.js" crossorigin="anonymous"></script>
@@ -18,13 +18,20 @@
         </div>
         <div class="title">
             <h1 id="title">
-                Welcome to <br> Timora
+                Welcome to <br> <span class="gradient-text">Timora</span>
             </h1>
         </div>
         <div class="reviews">
-            <i class="fa-solid fa-quote-left" id="quote"></i>
+            <p class="start-text">
+                Get Started
+            </p>
+            <button class="get-started">
+                <i class="fa-solid fa-square-check" id="quote">
+                </i>
+            </button>
         </div>
     </div>
+    <script src="scripts/index.js"></script>
     <script src="scripts/global.js"></script>
 </body>
 </html>
