Fix the issues and add go back button

--- a/login/index.html
+++ b/login/index.html
@@ -34,6 +34,11 @@
                 <button class="sign-in">
                     Sign in
                 </button>
+                <div class="go-back">
+                    <p class="recent-page">
+                        Go Back
+                    </p>
+                </div>
             </div>
         </div>
     </div>
