Make the corrections

--- a/login/create-account.html
+++ b/login/create-account.html
@@ -15,7 +15,10 @@
     <title>Create Account</title>
 </head>
 <body>
-    
+    <canvas id="grainCanvas"></canvas>
+    <div class="container">
+        
+    </div>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/create-account.js"></script>
 </body>
