--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://kit.fontawesome.com/cd4b7ba0d5.js" crossorigin="anonymous"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <canvas id="grainCanvas"></canvas>
