--- a/login/index.html
+++ b/login/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="/styles/login-pages.css">
     <script src="https://kit.fontawesome.com/cd4b7ba0d5.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <script src="/scripts/login.js"></script>
+    <script src="/scripts/login-pages.js"></script>
     <script src="/scripts/global.js"></script>
 </body>
 </html>
