--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://kit.fontawesome.com/cd4b7ba0d5.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="assets/icons/timora-logo.png">
 </head>
 <body>
     <canvas id="grainCanvas"></canvas>
