--- a/login/create-account.html
+++ b/login/create-account.html
@@ -23,6 +23,7 @@
         </div>
         <div class="mail-continue">
             <input class="mail" placeholder="Your email" type="email">
+            <input class="password" placeholder="Password" type="password">
             <button class="continue">
                 Continue
             </button>
