Update create-account files

--- a/login/create-account.html
+++ b/login/create-account.html
@@ -26,6 +26,17 @@
             <button class="continue">
                 Continue
             </button>
+        <div class="external-options">
+            <p class="or">
+                or
+            </p>
+            <button class="google">
+                <img class="google-logo" src="/assets/icons/google-logo.svg">
+            </button>
+            <button class="apple">
+                <img class="apple-logo" src="/assets/icons/apple-logo.svg">
+            </button>
+        </div>
         </div>
     </div>
     <script src="/scripts/global.js"></script>
