--- a/login/create-account.html
+++ b/login/create-account.html
@@ -17,7 +17,16 @@
 <body>
     <canvas id="grainCanvas"></canvas>
     <div class="container">
-        
+        <div class="logo-title">
+            <img class="logo" id="timora-logo" src="/assets/icons/ios-logo.svg">
+            <h1 class="title">Create account</h1>
+        </div>
+        <div class="mail-continue">
+            <input class="mail" placeholder="Your email" type="email">
+            <button class="continue">
+                Continue
+            </button>
+        </div>
     </div>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/create-account.js"></script>
