Debug and update the checkmark

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 Get Started
             </p>
             <button class="get-started">
-                <i class="fa-solid fa-square-check" id="quote">
-                </i>
+                <img id="quote" src="/assets/icons/checkmark.svg">
             </button>
         </div>
     </div>
