Finish sign-in.html except the backend

--- a/login/create-account.html
+++ b/login/create-account.html
@@ -22,7 +22,7 @@
             <h1 class="title">Create account</h1>
         </div>
         <div class="mail-continue">
-            <input class="mail" placeholder="Your email" type="email">
+            <input class="mail" placeholder="E-mail" type="email">
             <input class="password" placeholder="Password" type="password">
             <div class="condition">
 
