--- a/login/sign-in.html
+++ b/login/sign-in.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/sign-in.css">
+    <script src="https://kit.fontawesome.com/cd4b7ba0d5.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In</title>
 </head>
 <body>
-    
+    <canvas id="grainCanvas"></canvas>
+    <div class="container">
+        <div class="logo-title">
+            <img class="logo" id="timora-logo" src="/assets/icons/ios-logo.svg">
+            <h1 class="title">Sign in</h1>
+        </div>
+        <div class="mail-continue">
+            <input class="mail" placeholder="E-mail" type="email">
+            <input class="password" placeholder="Password" type="password">
+            <div class="condition">
+
+            </div>
+            <button class="continue">
+                Continue
+            </button>
+        <div class="external-options">
+            <p class="or">
+                or
+            </p>
+            <button class="google">
+                <img class="google-logo" src="/assets/icons/google-logo.svg">
+            </button>
+            <button class="apple">
+                <img class="apple-logo" src="/assets/icons/apple-logo.svg">
+            </button>
+        </div>
+        <footer>
+            <div class="back-button">
+                <p class="go-back">
+                    Go Back
+                </p>
+            </div>
+        </footer>
+        </div>
+    </div>
+    <script src="/scripts/global.js"></script>
+    <script src="/scripts/sign-in.js"></script>
 </body>
 </html>
