Finish create account page except backend

--- a/login/create-account.html
+++ b/login/create-account.html
@@ -24,7 +24,10 @@
         <div class="mail-continue">
             <input class="mail" placeholder="Your email" type="email">
             <input class="password" placeholder="Password" type="password">
-            <button class="continue">
+            <div class="condition">
+
+            </div>
+            <button class="continue" disabled>
                 Continue
             </button>
         <div class="external-options">
@@ -38,6 +41,13 @@
                 <img class="apple-logo" src="/assets/icons/apple-logo.svg">
             </button>
         </div>
+        <footer>
+            <div class="back-button">
+                <p class="go-back">
+                    Go Back
+                </p>
+            </div>
+        </footer>
         </div>
     </div>
     <script src="/scripts/global.js"></script>
