Fail e-mail verification

--- a/login/create-account.html
+++ b/login/create-account.html
@@ -52,5 +52,6 @@
     </div>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/create-account.js"></script>
+    <script src="/scripts/email-verification.js"></script>
 </body>
 </html>
