--- a/home.html
+++ b/home.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
     <canvas id="grainCanvas"></canvas>
@@ -13,7 +15,7 @@
         </header>
 
         <footer>
-
+            
         </footer>
     </div>
     <script src="scripts/home.js"></script>
