--- a/home.html
+++ b/home.html
@@ -11,9 +11,19 @@
     <canvas id="grainCanvas"></canvas>
     <div class="container">
         <header>
-
+            <img class="timora-logo" src="/assets/icons/ios-logo.svg">
         </header>
-
+        <div class="main-circle"></div>
+        <div class="main-text">
+            <p class="deep-work">Deep Work</p>
+            <h1 class="timer">25:00</h1>
+        </div>
+        <div class="buttons">
+            <button class="start-work">
+                <img class="work-icon" src="/assets/icons/">
+                Start Work
+            </button>
+        </div>
         <footer>
             
         </footer>
