Set id for footer

--- a/home.html
+++ b/home.html
@@ -26,19 +26,19 @@
         </div>
     </div>
     <div class="footer">
-        <a href="#" class="footer-item">
+        <a href="#" class="footer-item" id="home">
             <img src="/assets/icons/home-icon.svg" alt="Home" class="footer-icon">
             <span>Home</span>
         </a>
-        <a href="#" class="footer-item">
+        <a href="#" class="footer-item" id="quotes">
             <img src="/assets/icons/quotes-icon.svg" alt="Quotes" class="footer-icon">
             <span>Quotes</span>
         </a>
-        <a href="#" class="footer-item">
+        <a href="#" class="footer-item" id="account">
             <img src="/assets/icons/account-icon.svg" alt="Account" class="footer-icon">
             <span>Account</span>
         </a>
-        <a href="#" class="footer-item">
+        <a href="#" class="footer-item" id="setings">
             <img src="/assets/icons/settings-icon.svg" alt="Settings" class="footer-icon">
             <span>Settings</span>
         </a>
