--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <img src="/assets/icons/quotes-icon-not.svg" alt="Quotes" class="footer-icon">
             <span>Quotes</span>
         </a>
-        <a href="#" class="footer-item" id="account">
+        <a href="#" class="footer-item" id="tasks">
             <img src="/assets/icons/tasks-icon-not.svg" alt="Account" class="footer-icon">
             <span>Tasks</span>
         </a>
