Build the home.html. Define next goals.

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <canvas id="grainCanvas"></canvas>
     <div class="container">
         <header>
-            <img class="timora-logo" src="/assets/icons/ios-logo.svg">
+            <img class="timora-logo" src="/assets/icons/ios-logo.svg" alt="Timora Logo">
         </header>
         <div class="main-circle"></div>
         <div class="main-text">
@@ -20,13 +20,28 @@
         </div>
         <div class="buttons">
             <button class="start-work">
-                <img class="work-icon" src="/assets/icons/">
+                <img class="work-icon" src="/assets/icons/play-icon.svg" alt="Start Work Icon">
                 Start Work
             </button>
         </div>
-        <footer>
-            
-        </footer>
+    </div>
+    <div class="footer">
+        <a href="#" class="footer-item">
+            <img src="/assets/icons/home-icon.svg" alt="Home" class="footer-icon">
+            <span>Home</span>
+        </a>
+        <a href="#" class="footer-item">
+            <img src="/assets/icons/quotes-icon.svg" alt="Quotes" class="footer-icon">
+            <span>Quotes</span>
+        </a>
+        <a href="#" class="footer-item">
+            <img src="/assets/icons/account-icon.svg" alt="Account" class="footer-icon">
+            <span>Account</span>
+        </a>
+        <a href="#" class="footer-item">
+            <img src="/assets/icons/settings-icon.svg" alt="Settings" class="footer-icon">
+            <span>Settings</span>
+        </a>
     </div>
     <script src="scripts/home.js"></script>
     <script src="scripts/global.js"></script>
