--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
             <span>Quotes</span>
         </a>
         <a href="#" class="footer-item" id="account">
-            <img src="/assets/icons/account-icon-not.svg" alt="Account" class="footer-icon">
-            <span>Account</span>
+            <img src="/assets/icons/tasks-icon-not.svg" alt="Account" class="footer-icon">
+            <span>Tasks</span>
         </a>
         <a href="#" class="footer-item" id="settings">
             <img src="/assets/icons/settings-icon-not.svg" alt="Settings" class="footer-icon">
