Debug and add customized colors to footer

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
             <img src="/assets/icons/account-icon.svg" alt="Account" class="footer-icon">
             <span>Account</span>
         </a>
-        <a href="#" class="footer-item" id="setings">
+        <a href="#" class="footer-item" id="settings">
             <img src="/assets/icons/settings-icon.svg" alt="Settings" class="footer-icon">
             <span>Settings</span>
         </a>
