Finish footer and debug

--- a/home.html
+++ b/home.html
@@ -27,23 +27,24 @@
     </div>
     <div class="footer">
         <a href="#" class="footer-item" id="home">
-            <img src="/assets/icons/home-icon.svg" alt="Home" class="footer-icon">
-            <span>Home</span>
+            <img src="/assets/icons/home-icon.svg" alt="Home" class="footer-icon" id="home-icon">
+            <span class="home-text">Home</span>
         </a>
         <a href="#" class="footer-item" id="quotes">
-            <img src="/assets/icons/quotes-icon-not.svg" alt="Quotes" class="footer-icon">
+            <img src="/assets/icons/quotes-icon-not.svg" alt="Quotes" class="footer-icon" id="quotes-icon">
             <span>Quotes</span>
         </a>
         <a href="#" class="footer-item" id="tasks">
-            <img src="/assets/icons/tasks-icon-not.svg" alt="Account" class="footer-icon">
+            <img src="/assets/icons/tasks-icon-not.svg" alt="Tasks" class="footer-icon" id="tasks-icon">
             <span>Tasks</span>
         </a>
         <a href="#" class="footer-item" id="settings">
-            <img src="/assets/icons/settings-icon-not.svg" alt="Settings" class="footer-icon">
+            <img src="/assets/icons/settings-icon-not.svg" alt="Settings" class="footer-icon" id="settings-icon">
             <span>Settings</span>
         </a>
     </div>
     <script src="scripts/home.js"></script>
     <script src="scripts/global.js"></script>
+    <script src="scripts/pomodoro.j"></script>
 </body>
 </html>
