Build Pomodoro Logic

--- a/home.html
+++ b/home.html
@@ -13,7 +13,9 @@
         <header>
             <img class="timora-logo" src="/assets/icons/ios-logo.svg" alt="Timora Logo">
         </header>
-        <div class="main-circle"></div>
+        <svg id="progress" width="300" height="300">
+            <circle id="progress-circle" cx="150" cy="150" r="140" fill="#ebebeb" />
+          </svg>
         <div class="main-text">
             <p class="deep-work">Deep Work</p>
             <h1 class="timer">
