Make the button change icon

--- a/home.html
+++ b/home.html
@@ -19,9 +19,9 @@
             <h1 class="timer">25:00</h1>
         </div>
         <div class="buttons">
-            <button class="start-work">
+            <button class="start-work" id="start-work">
                 <img class="work-icon" src="/assets/icons/play-icon.svg" alt="Start Work Icon">
-                Start Work
+                <span>Start Work</span>
             </button>
         </div>
     </div>
@@ -45,6 +45,6 @@
     </div>
     <script src="scripts/home.js"></script>
     <script src="scripts/global.js"></script>
-    <script src="scripts/pomodoro.j"></script>
+    <script src="scripts/pomodoro.js"></script>
 </body>
 </html>
