--- a/home.html
+++ b/home.html
@@ -16,7 +16,9 @@
         <div class="main-circle"></div>
         <div class="main-text">
             <p class="deep-work">Deep Work</p>
-            <h1 class="timer">25:00</h1>
+            <h1 class="timer">
+                <span id="min">25</span>:<span id="sec">00</span>
+            </h1>
         </div>
         <div class="buttons">
             <button class="start-work" id="start-work">
