Finish the tasks page

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
             <img src="/assets/icons/quotes-icon-not.svg" alt="Quotes" class="footer-icon" id="quotes-icon">
             <span>Quotes</span>
         </a>
-        <a href="#" class="footer-item" id="tasks">
+        <a href="task.html" class="footer-item" id="tasks">
             <img src="/assets/icons/tasks-icon-not.svg" alt="Tasks" class="footer-icon" id="tasks-icon">
             <span>Tasks</span>
         </a>
