Add manifest file

--- a/task.html
+++ b/task.html
@@ -6,6 +6,7 @@
     <title>Tasks</title>
     <link rel="stylesheet" href="styles/task.css">
     <link rel="stylesheet" href="styles/global.css">
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <canvas id="grainCanvas"></canvas>
