--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/global.css">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
