--- a/home.html
+++ b/home.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="manifest" href="/manifest.json">
+    <style>
+        @media only screen and (max-width: 600px) {
+            html {
+                transform: scale(0.8);
+                transform-origin: top left;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -56,6 +64,3 @@
 </body>
 
 </html>
-
-<!-- Add the quotes logic! -->
- 
